# autowarev2x_msgs

./: CMakeLists.txt  package.xml
msg/: V2XTuple.msg
